# OpS_4_5

./: CMakeLists.txt  README.md  gener_t.py  general_utils.cpp  general_utils.hpp  http_server.hpp  main.cpp  serial_port.hpp  socat_virtual_terminal.sh  temperature_logger.cpp
html/: 404.html  temperature.html
html/data/: temperature.html
js/: temperatureHandler.js
